# lynkmesh-ai

./: .coverage  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.ai/tasks/: task_652f550e888e.json  task_827fdc9a627d.json  task_9b430a135874.json  task_9b430a135874_legacy.json  task_c8e40cf721f7.json  task_df07476b1857.json  task_ea389d1ca846.json  task_ecfd06812f62.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: AGENT_LOOP_ARCHITECTURE.md  ARCHITECTURE_VALIDATION.md  OSS_LAUNCH_AUDIT.md  OSS_READINESS_FINAL.md  PHASE_1_7_INTEGRATION_AUDIT.md  PHASE_2_AGENT_LOOP.md  PROVIDER_ARCHITECTURE.md  RELEASE_CHECKLIST.md  ROADMAP.md
docs/adr/: ADR-001-provider-architecture.md  ADR-002-storage-architecture.md  ADR-003-event-bus-architecture.md
examples/sample_project/: __init__.py  main.py
lynkmesh_ai/: __init__.py  cli.py
lynkmesh_ai/agents/: __init__.py  collector.py  memory.py
lynkmesh_ai/bridges/: __init__.py  base.py  chatgpt_bridge.py  claude_bridge.py  claude_task.py  inbox.py  registry.py  task_router.py
lynkmesh_ai/context/: __init__.py  builder.py  formatter.py  schema.py
lynkmesh_ai/core/: __init__.py  change_tracker.py  graph.py  parser.py  resolver.py
lynkmesh_ai/events/: __init__.py  bus.py
lynkmesh_ai/knowledge/: __init__.py  base.py  extractor.py  fact.py
lynkmesh_ai/reasoning/: __init__.py  architecture_analyzer.py  decision_engine.py  impact_analyzer.py  risk_engine.py
lynkmesh_ai/semantic/: graph.py  (+6 more)
tests/: test_agent_memory.py  test_agent_provider_contract.py  test_bridge_lifecycle.py  test_event_bus.py  test_integration_phase17.py  test_provider_registry.py  test_storage_adapter.py
(+20 files in other folders)
